--- a/AndroidWebApp/android.css
+++ b/AndroidWebApp/android.css
@@ -7,4 +7,18 @@ body {
     padding: 0;	            /* Amount of negative space around the inside of the body */
 }
 
-
+#header h1 { 
+    margin: 0;
+    padding: 0;
+} 
+#header h1 a {
+    background-color: #ccc;
+    border-bottom: 1px solid #666;
+    color: #222;
+    display: block;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 10px 0;
+    text-align: center;
+    text-decoration: none;
+}
