--- a/AndroidWebApp/android.css
+++ b/AndroidWebApp/android.css
@@ -22,3 +22,20 @@ body {
     text-align: center;
     text-decoration: none;
 }
+
+#header ul {
+    list-style: none;
+    margin: 10px;
+    padding: 0;
+}
+#header ul li a {
+    background-color: #FFFFFF;
+    border: 1px solid #999999;
+    color: #222222;
+    display: block;
+    font-size: 17px;
+    font-weight: bold;
+    margin-bottom: -1px;
+    padding: 12px 10px;
+    text-decoration: none;
+}
