--- a/AndroidWebApp/android.css
+++ b/AndroidWebApp/android.css
@@ -44,7 +44,10 @@ body {
     padding: 10px;
 }
 
-
+#header h1 a {
+    text-shadow: 0px 1px 1px #fff;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#999));
+}
 #header ul li:first-child a {
     -webkit-border-top-left-radius: 8px;
     -webkit-border-top-right-radius: 8px;
