--- a/AndroidWebApp/android.css
+++ b/AndroidWebApp/android.css
@@ -57,3 +57,17 @@ body {
     -webkit-border-bottom-right-radius: 8px;
 }
 
+#header div.leftButton {
+    position: absolute;
+    top: 7px;
+    left: 6px;
+    height: 30px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    text-shadow: rgba (0,0,0,0.6) 0px -1px 1px;
+    line-height: 28px;
+    border-width: 0 8px 0 8px;
+    -webkit-border-image: url(images/button.png) 0 8 0 8;
+}
+
