--- a/AndroidWebApp/android.css
+++ b/AndroidWebApp/android.css
@@ -43,7 +43,9 @@ body {
 #content, #sidebar {
     padding: 10px;
 }
-
+#footer {
+    display: none;
+}
 #header h1 a {
     text-shadow: 0px 1px 1px #fff;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#999));
@@ -56,7 +58,9 @@ body {
     -webkit-border-bottom-left-radius: 8px;
     -webkit-border-bottom-right-radius: 8px;
 }
-
+#header ul.hide {
+    display: none;
+}
 #header div.leftButton {
     position: absolute;
     top: 7px;
